--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.6.1"
   }
 }
