--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
   },
   "dependencies": {
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.1",
     "cors": "^2.8.5",
+    "inversify": "^6.0.1",
     "morgan": "^1.10.0",
-    "socket.io": "^4.6.1"
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   }
 }
